@@ -37,7 +37,12 @@ sub version {
     print "Thrall $VERSION\n";
 }
 
-my $runner = Plack::Runner->new(server => 'Thrall', env => 'deployment', version_cb => \&version);
+my $runner = Plack::Runner->new(
+    server     => 'Thrall',
+    env        => 'deployment',
+    loader     => 'Delayed',
+    version_cb => \&version,
+);
 $runner->parse_options(@ARGV);
 $runner->run;
 
